--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <!--        hr with a class of my-(1-5) is to create space between containers -->
         <div class="row aboutrow">
             <div class="col-sm m-3 p-2">
-                <img src="assets/img/Ana.jpg" class="img-fluid propic">
+                <img src="assets/img/ana.jpg" class="img-fluid propic">
             </div>
             <div class="abouttext col-sm m-3 p-2">
                 <h3>Intro to Ana</h3>
